# 2526_5AHEL_DA_fschoer1_mhofer_Motoransteuerung

./: Hofer.md  README.md  Schörkhuber.md
Hofer/: delete.txt
Hofer/Dokus/: CLI.docx  Maven.docx
Hofer/Projekte/: Readme.md
Hofer/Projekte/PC-Seriell-Microcontroller_02/: pom.xml
Hofer/Projekte/PC-Seriell-Microcontroller_02/src/main/java/: module-info.java
Hofer/Projekte/PC-Seriell-Microcontroller_02/src/main/java/com/example/testlauf_02/: HelloApplication.java  HelloController.java
Hofer/Projekte/PC-Seriell-Microcontroller_02/src/main/resources/com/example/testlauf_02/: hello-view.fxml
Hofer/Projekte/PC-Seriell-uC-Schritt02/: main.c  pom.xml
Hofer/Projekte/PC-Seriell-uC-Schritt02-updated/: main.c
Hofer/Projekte/PC-Seriell-uC-Schritt02/src/main/java/: module-info.java
Hofer/Projekte/PC-Seriell-uC-Schritt03/PC/: HelloApplication.java
Hofer/Projekte/PC-Seriell-uC-Schritt03/uC/: main.c
Hofer/Projekte/PC-Seriell_Microcontroller_01/src/: Main.java
Schörkhuber/: CMakeLists.txt  Diplomarbeit_Word_dok_schreiben .docx  Vorwissenschaftliche_Arbeit.docx  main.c
Schörkhuber/Ansteuerung_V1/: CMakeLists.txt  main.c
Schörkhuber/KiCAD/BLDC_Motor_V1.1/: BLDC_Motor_V1.1.kicad_pcb  BLDC_Motor_V1.1.kicad_pro
Schörkhuber/KiCAD/BLDC_Motor_neu_1/: #auto_saved_files#  BLDC_Motor_neu_1-Edge_Cuts.gbr  BLDC_Motor_neu_1-F_Cu.gbr  BLDC_Motor_neu_1-job.gbrjob  BLDC_Motor_neu_1.drl  BLDC_Motor_neu_1.kicad_pcb  BLDC_Motor_neu_1.kicad_prl  BLDC_Motor_neu_1.kicad_pro  BLDC_Motor_neu_1.kicad_sch  fp-info-cache  fp-lib-table  ~BLDC_Motor_neu_1.kicad_pcb.lck
(+5 files in other folders)
